Fixed wrapping issue on heading, all links (including buttons) open in new tab

--- a/src/style.css
+++ b/src/style.css
@@ -242,7 +242,7 @@ header h2 {
     }
 
     h2 {
-        font-size: 70px;
+        font-size: 200px;
     }
 
     h3 {
